2004-06-03  James Turner  <james@worldforge.org>

	* XCode project updates; remove pbxuser file from CVS, shouldn't
	  be checked in.

 2004-05-13 Al Riddoch  <alriddoch@zepler.org>
    - skstream/skserver_unix.h: Remove can_accept() from unix_socket_server
      as its not implemented and the version in the base class should be used.
 2003-12-19 Al Riddoch  <alriddoch@zepler.org>
    - Remove Serial from rpm spec as it is not required, and messes up
      deps.
    - Release version 0.3.1
 2003-12-08 Al Riddoch <alriddoch@zepler.org>
    - skstream/skserver.cpp: Correctly use SOCKET_ERROR instead of
      INVALID_SOCKET when checking return value of syscalls.
    - Add AC_CANONICAL_SYSTEM macro.
 2003-11-15 Al Riddoch <alriddoch@zepler.org>
    - Fix license typo in the rpm spec.
 2003-09-29 Al Riddoch <alriddoch@zepler.org>
    - Release version 0.3.0
 2003-09-29 Al Riddoch <alriddoch@zepler.org>
    - Add arch dependent header to rpm spec.
 2003-09-29 Al Riddoch <alriddoch@zepler.org>
    - Add libws2_32 which is required for getaddrinfo and friends under
      windows.
    - ping/ping.cpp: Move signal.h so it is available in windows build.
    - test/skstreamtestrunner.cpp: Make the test always return success so
      that distcheck rule works. The test only succeeds if its run as root
      and the echo service is running, both of which are undesirable.
 2003-09-28 Al Riddoch <alriddoch@zepler.org>
    - skstream/skstream.h: Add accessors so address sizes in buffer class
      are accessible from outside stream class.
    - ping/ping.cpp: Re-work code for handling conversion of addresses
      to presentation format for protocol independance.
 2003-09-27 Al Riddoch <alriddoch@zepler.org>
    - test/childskstreamtest.h: Get rid of some of the java-isms, and
      handle some failures a little more cleanly. Fix the udp test.
    - test/skstreamtestrunner.cpp: Ensure that the tests exit status
      reflects whether it passes or fails.