@@ -1,3 +1,7 @@
+2004-06-06  Al Riddoch  <alriddoch@zepler.org>
+
+	* Fix devel dependencies in rpm spec.
+
 2004-06-03  James Turner  <james@worldforge.org>
 
 	* XCode project updates; remove pbxuser file from CVS, shouldn't
